<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fortypes"
    tools:context=".usersinfo.Login">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="40dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="Enter details to Login"
            android:textColor="@color/hint_color"
            android:textSize="23sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/UserIdHint"
            android:inputType="text"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PasswordHint"
            android:inputType="textPassword"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/submit"
            android:layout_marginTop="10dp"
            android:background="@color/hint_color"
            android:text="@string/ButtonLogin"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/register_page"
            android:layout_margin="15dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:text="@string/registerPage"
            android:textAlignment="center"
            android:textColor="@color/hint_color"></TextView>

        <TextView
            android:id="@+id/forgetpassword"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:text="Forget Password?"
            android:textAlignment="center"
            android:textColor="@color/hint_color"></TextView>

        <ProgressBar
            android:id="@+id/lprogressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="invisible"></ProgressBar>
    </TableLayout>

</LinearLayout>