<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".extras.About">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_centerVertical="true"
            android:id="@+id/back_arrow"
            android:paddingLeft="10dp"
            android:clickable="true"
            android:onClick="finish"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/back_arrow"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>

        <Button
            android:id="@+id/addImage"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_home_"
            android:onClick="clickable" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ayur_intro"
        android:lineSpacingExtra="4sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:background="@color/colorLP"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mindbody"
        android:lineSpacingExtra="4sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:background="@color/colorLP"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        android:lineSpacingExtra="4sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:background="@color/colorLP"/>

</LinearLayout>